--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -11,10 +11,11 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/download-artifact@main
       - name: npm install and build webpack
         run: |
           npm install
-          npm run build
+          needs: build
       - uses: actions/upload-artifact@main
         with:
           name: webpack artifacts
