--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,7 +26,7 @@ jobs:
 
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-2016]
+        - uses: actions/download-artifact@main
         node-version: [12.x, 14.x]
 
     steps:
