--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -15,7 +15,7 @@ jobs:
       - name: npm install and build webpack
         run: |
           npm install
-          needs: build
+          npm run build
       - uses: actions/upload-artifact@main
       - uses: actions/download-artifact@main
         with:
