--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -17,7 +17,6 @@ jobs:
           npm install
           npm run build
       - uses: actions/upload-artifact@main
-      - uses: actions/download-artifact@main
         with:
           name: webpack artifacts
           path: public/
@@ -28,6 +27,7 @@ jobs:
 
     strategy:
       matrix:
+        os: [ubuntu-latest, windows-2016]
         node-version: [12.x, 14.x]
 
     steps:
