--- a/.github/workflows/approval-workflow.yml
+++ b/.github/workflows/approval-workflow.yml
@@ -4,3 +4,11 @@ on: pull_request_review
 jobs:
 labelWhenApproved
   runs-on: ubuntu-latest
+
+  steps: 
+    - name: Label when approved
+    - uses: actions/checkout@v2
+    env:
+      APPROVALS: 1
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      ADD_LABEL: "approved"
